# roan

./: .gitignore  .rusty-hook.toml  Cargo.toml  README.md  cliff.toml  justfile  nx.json  package-lock.json  package.json
.github/: CONTRIBUTING.md  labeler.yml
.github/workflows/: labeler.yml  release.yaml  stale.yaml
cli/: Cargo.toml  build.rs  std.tar
cli/scripts/: install.ps1  install.sh
cli/src/: cli.rs  config_file.rs  context.rs  fs.rs  instance.rs  logger.rs  main.rs  module_loader.rs  panic_handler.rs  shell.rs  std.rs  stds.rs  style.rs
cli/src/commands/: init.rs  install.rs  run.rs
cli/src/pm/: entry.rs  mod.rs  packs.rs  semver.rs  source.rs
core/ast/: Cargo.toml
core/ast/src/: ast.rs  lib.rs  parser.rs  source.rs
core/ast/src/ast/: expr.rs  mod.rs  statements.rs
core/ast/src/lexer/: identifier.rs  mod.rs  number.rs  string.rs  token.rs
core/ast/src/parser/: expressions.rs  mod.rs  statements.rs
core/engine/: Cargo.toml
core/engine/src/: context.rs  lib.rs  macros.rs  path.rs  source.rs
core/engine/src/interpreter/: access.rs  conditions.rs  errors.rs  expr.rs  functions.rs  mod.rs  stmt.rs  structs.rs
core/engine/src/interpreter/passes/: imports.rs  mod.rs  resolver.rs  types.rs
core/engine/src/module/: fs.rs  loader.rs  mod.rs
core/engine/src/module/loaders/: basic.rs  ident.rs  mod.rs
core/engine/src/natives/: debug.rs  io.rs  mod.rs  process.rs
core/engine/src/value/: mod.rs
core/engine/src/value/methods/: char.rs  string.rs  vec.rs
core/engine/src/vm/: frame.rs  mod.rs  native_fn.rs  value.rs
core/error/: Cargo.toml
core/error/src/: diagnostic.rs  error.rs  frame.rs  lib.rs  position.rs  span.rs
core/shell/: Cargo.toml
core/shell/src/: lib.rs  link.rs
lib/: base64.roan  debug.roan  format.roan  io.roan  lib.roan  process.roan  string.roan
playground/: pulse.toml  result  roan.toml
playground/src/: add.roan  main.roan  test.roan
tools/git/: Cargo.toml
tools/git/src/: main.rs
tools/logs/: Cargo.toml
tools/logs/src/: entries.rs  gui.rs  main.rs  table.rs
