[workspace]
members = [
    "core/engine",
    "cli",
    "core/error",
    "core/ast",
    "tools/git",
    "tools/logs",
]
resolver = "1"

[workspace.dependencies]

# Core dependencies
roan-engine = { path = "core/engine", version = "0.1.6" }
roan-error = { path = "core/error", version = "0.1.1" }
roan-ast = { path = "core/ast", version = "0.1.3" }

# Other dependencies
anyhow = "1.0.93"
colored = "2.1.0"
log = "0.4.22"
thiserror = "1.0.69"
bon = "2.3.0"
tracing = { version = "0.1.40", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "chrono",
    "time",
] }
tracing-appender = "0.2"
backtrace = "0.3.74"
clap = { version = "4.5.20", features = ["derive"] }
anstyle = "1.0.10"
tar = "0.4.42"
toml = "0.8.19"
serde = "1.0.215"
uuid = { version = "1.11.0", features = ["v4"] }
indexmap = "2.6.0"
anstream = "0.6.18"
toml_edit = "0.22.22"
octocrab = "0.41.2"
http-body-util = "0.1.2"
