[package]
name = "roan-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
backtrace = { workspace = true }
clap = { workspace = true, features = ["derive"] }
colored = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
vit_logger = { workspace = true }
roan-engine = { workspace = true }
dirs = { workspace = true }
anstyle = { workspace = true }
tar = { workspace = true }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[build-dependencies]
project-root = "0.2.2"
tar = "0.4.42"