[package]
name = "roan-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
backtrace = { workspace = true }
clap = { workspace = true, features = ["derive"] }
colored = { workspace = true }
roan-engine = { workspace = true }
anstyle = { workspace = true }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
anstream = { workspace = true }
toml_edit = { workspace = true }
octocrab = { workspace = true }
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
http-body-util = { workspace = true }
dirs = "5.0.1"
flate2 = "1.0.34"
tar = "0.4.43"
semver = "1.0.23"
itertools = "0.13.0"
roan-shell = { workspace = true }