[package]
name = "roan-ast"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Abstract syntax tree for the Roan project"

[dependencies]
anyhow = { workspace = true }
roan-error = { workspace = true }
colored = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }
