[package]
name = "roan-engine"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "The core engine for the Roan project"

[dependencies]
roan-error = { workspace = true }
roan-ast = { workspace = true }
bon = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
indexmap = { workspace = true }
