[package]
name = "logs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }
rfd = "0.15.0"
egui_extras = { version = "0.29.1", features = ["default"] }
serde = { version = "1.0.210", features = ["derive"] }
tracing = { workspace = true }
chrono = "0.4"
regex = "1.11.0"