[package]
name = "logs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
egui = "0.29"
eframe = { version = "0.29" }
rfd = "0.15.1"
egui_extras = { version = "0.29.1", features = ["default"] }
serde = { version = "1.0.215", features = ["derive"] }
tracing = "0.1.40"
chrono = "0.4"
regex = "1.11.1"